--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 	<script src="js/superfish.js"></script>
 	<script src="js/jquery.responsivemenu.js"></script>
 	<script src="js/jquery.flexslider-min.js"></script>
+	
 		<!-- <script type="text/javascript" src="js/firebase.js"></script> -->
 		<script type="text/javascript" src="js/angular/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+
+
 	<script src="js/FF-cash.js"></script>
+	<script type="text/javascript" src="config/config.js"></script>
+	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controller/galleryController.js"></script>
 	
