--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<script type="text/javascript" src="js/angular/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+		<!-- <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script> -->
 
 
 	<script src="js/FF-cash.js"></script>
@@ -26,6 +27,7 @@
 	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controller/galleryController.js"></script>
+	<script src="exmaple.js"></script>
 	
 </body>
 </html>
