colocando una relacion

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controller/galleryController.js"></script>
+	<script type="text/javascript" src="service/phonecatAppSrv.js"></script>
 	<script src="exmaple.js"></script>
-	
+ 
 </body>
 </html>
