--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="es" ng-app="phonecatApp">
+
 <head>
-	<title>Http</title>
+	<title>Task</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+	<!-- Boostrap 4 -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body ng-cloak>
 	<div ng-view></div>
-	<script src="js/jquery-1.7.1.min.js"></script>
-	<script src="js/script.js"></script>
-	<script src="js/superfish.js"></script>
-	<script src="js/jquery.responsivemenu.js"></script>
-	<script src="js/jquery.flexslider-min.js"></script>
-	
-		<!-- <script type="text/javascript" src="js/firebase.js"></script> -->
-		<script type="text/javascript" src="js/angular/angular.min.js"></script>
-		<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
-		<!-- <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script> -->
 
-
-	<script src="js/FF-cash.js"></script>
+	<!-- Boostrap 4 -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<!-- Angular -->
+	<script type="text/javascript" src="js/angular/angular.min.js"></script>
+	<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
+	<!-- firebase -->
+	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+	<!-- App -->
 	<script type="text/javascript" src="config/config.js"></script>
 	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controller/galleryController.js"></script>
 	<script type="text/javascript" src="service/phonecatAppSrv.js"></script>
 	<script src="exmaple.js"></script>
- 
+
 </body>
+
 </html>
