--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body ng-cloak>
-	<div ng-view></div>
+	<ng-view autoscroll="true"></ng-view>
 
 	<!-- Boostrap 4 -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<!-- icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 	<!-- Angular -->
 	<script type="text/javascript" src="js/angular/angular.min.js"></script>
 	<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
@@ -26,10 +28,10 @@
 	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
 	<!-- App -->
 	<script type="text/javascript" src="config/config.js"></script>
-	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controller/galleryController.js"></script>
 	<script type="text/javascript" src="service/phonecatAppSrv.js"></script>
+	<script type="text/javascript" src="controller/taskController.js"></script>
 	<script src="exmaple.js"></script>
 
 </body>
