--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body ng-cloak>
 	<ng-view autoscroll="true"></ng-view>
 
+	<!-- <div ng-controller="testController as test">
+		<input type="text" ng-click="test.raro()">
+	</div> -->
+
 	<!-- Boostrap 4 -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -32,7 +36,10 @@
 	<script type="text/javascript" src="controller/galleryController.js"></script>
 	<script type="text/javascript" src="service/phonecatAppSrv.js"></script>
 	<script type="text/javascript" src="controller/taskController.js"></script>
-	<script src="exmaple.js"></script>
+
+	<!-- Directives -->
+	
+	<script type="text/javascript" src="directives/fileModel.js"></script>
 
 </body>
 
