--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 	<script type="text/javascript" src="controller/taskController.js"></script>
 
 	<!-- Directives -->
-	
 	<script type="text/javascript" src="directives/fileModel.js"></script>
+
+	<!-- Services -->
+	<script src="service/todoSrv.js"></script>
 
 </body>
 
