--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
+
 	<!-- App -->
 	<script type="text/javascript" src="config/config.js"></script>
 	<script type="text/javascript" src="app.js"></script>
