--- a/index.html
+++ b/index.html
@@ -1,52 +1,102 @@
 <!DOCTYPE html>
-<html lang="es" ng-app="phonecatApp">
+<html
+    lang="es"
+    ng-app="phonecatApp"
+>
 
-<head>
-	<title>Task</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes" />
-	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-	<!-- Boostrap 4 -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
+    <head>
+        <title>Task</title>
+        <meta charset="utf-8">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        >
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1,user-scalable=yes"
+        >
+        <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+        <link rel="stylesheet" href="css/page.css" type="text/css" media="screen">
+        <!-- Boostrap 4 -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    </head>
 
-<body ng-cloak>
-	<ng-view autoscroll="true"></ng-view>
 
-	<!-- <div ng-controller="testController as test">
-		<input type="text" ng-click="test.raro()">
-	</div> -->
+    <body ng-cloak>
+        <!-- <include-after src="home/modules/landing/views/header.html"></include-after> -->
+        <ng-include src=" 'views/navbar.html' "></ng-include>
+        <div class="container mt-5">
+            <ng-view autoscroll="true"></ng-view>
+        </div>
 
-	<!-- Boostrap 4 -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-	<!-- icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-	<!-- Angular -->
-	<script type="text/javascript" src="js/angular/angular.min.js"></script>
-	<script type="text/javascript" src="js/angular-route/angular-route.min.js"></script>
-	<!-- firebase -->
-	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
+        <!-- Boostrap 4 -->
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"
+        ></script>
+        <!-- icons -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <!-- Angular -->
+        <script
+            type="text/javascript"
+            src="js/angular/angular.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="js/angular-route/angular-route.min.js"
+        ></script>
+        <!-- firebase -->
+        <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
 
-	<!-- App -->
-	<script type="text/javascript" src="config/config.js"></script>
-	<script type="text/javascript" src="app.js"></script>
-	<script type="text/javascript" src="controller/galleryController.js"></script>
-	<script type="text/javascript" src="controller/taskController.js"></script>
-	<script type="text/javascript" src="controller/chatController.js"></script>
 
-	<!-- Directives -->
-	<script type="text/javascript" src="directives/fileModel.js"></script>
+        <!-- App -->
+        <script
+            type="text/javascript"
+            src="config/config.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="app.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="controller/galleryController.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="controller/taskController.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="controller/chatController.js"
+        ></script>
 
-	<!-- Services -->
-	<script src="service/todoSrv.js"></script>
-	<script src="service/chatSrv.js"></script>
-	<script src="service/phonecatAppSrv.js"></script>
+        <!-- Directives -->
+        <script
+            type="text/javascript"
+            src="directives/fileModel.js"
+        ></script>
 
-</body>
+        <!-- Services -->
+        <script src="service/todoSrv.js"></script>
+        <script src="service/chatSrv.js"></script>
+        <script src="service/phonecatAppSrv.js"></script>
+
+    </body>
+
 
 </html>
